# requests-unixsocket2

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  renovate.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
examples/: abstract_namespace.py  docker-info.py
requests_unixsocket/: __init__.py  adapters.py  testutils.py
requests_unixsocket/tests/: test_requests_unixsocket.py
