[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "requests-unixsocket2"
version = "1.0.1"
description = "Use requests to talk HTTP via a UNIX domain socket"
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = ["requests (>=2.32.5,<3)", "urllib3 (>=2.6.3,<3.0)"]
requires-python = ">=3.10"

[project.license]
text = "ISC"

[[project.authors]]
name = "thelab"
email = "thelabdev@thelab.co"

[project.urls]
Homepage = "https://gitlab.com/thelabnyc/requests-unixsocket2"
Repository = "https://gitlab.com/thelabnyc/requests-unixsocket2"

[dependency-groups]
dev = [
    "coverage[toml] (>=7.13.1,<8)",
    "ruff (>=0.14.14)",
    "pytest (>=9.0.2,<10)",
    "waitress (>=3.0.2,<4)",
    "mypy (>=1.19.1,<2)",
    "types-requests (>=2.32.4.20260107,<3)",
    "types-waitress (>=3.0.1.20250801,<4)",
    "tox (>=4.34.1)",
    "tox-uv (>=1.29.0)",
]

[tool.hatch.build.targets.wheel]
packages = ["requests_unixsocket"]

[[tool.uv.index]]
name = "thelabnyc"
url = "https://gitlab.com/api/v4/groups/269576/-/packages/pypi/simple"
explicit = true

[tool.mypy]
python_version = "3.10"

[tool.pytest.ini_options]
addopts = "--tb=short"


[tool.isort]
profile = "black"
from_first = true

[tool.ruff.lint.isort]
from-first = true

[tool.coverage.run]
branch = true
source_pkgs = ["requests_unixsocket"]

[tool.coverage.report]
show_missing = true
ignore_errors = true


[tool.commitizen]
name = "cz_conventional_commits"
annotated_tag = true
gpg_sign = true
tag_format = "v$version"
update_changelog_on_bump = true
changelog_merge_prerelease = true
version_provider = "pep621"
version_scheme = "pep440"
version_files = ["pyproject.toml:version"]
pre_bump_hooks = ["pre-commit run --all-files || true"]
post_bump_hooks = ["git push origin master $CZ_POST_CURRENT_TAG_VERSION"]
